--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <img src="photo.jpg" />
     <h2>About</h2>
     <p>I am a 17-year old student from <a href="http://www.dunmanhigh.moe.edu.sg">Dunman High School</a>, Singapore.</p>
+    <p>I love eating chicken rice! </p>
+    <img src='rice.jpg'/>
     <h2>Interests</h2>
     <p>I am interested in <a href="http://www.espn.com/">volleyball</a>.</p>
     <h2>Projects</h2>
