--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <img src="photo.jpg" />
     <h2>About</h2>
     <p>I am a 17-year old student from <a href="http://www.dunmanhigh.moe.edu.sg">Dunman High School</a>, Singapore.</p>
-    <p>I love eating chicken rice! </p>
-    <img src='rice.jpg'/>
+    
     <h2>Interests</h2>
     <p>I am interested in <a href="http://www.espn.com/">volleyball</a>.</p>
+    <p>I like photography too! Here's one of my pictures!</p>
     <h2>Projects</h2>
     <p>I am participating in <a href="https://developers.google.com/open-source/gci/">Google Code-in 2016</a> with <a href="http://fossasia.org">FOSSASIA</a>!</p>
   </body>
