--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <p>I am a 17-year old student from <a href="http://www.dunmanhigh.moe.edu.sg">Dunman High School</a>, Singapore.</p>
     
     <h2>Interests</h2>
-    <p>I am interested in <a href="http://www.espn.com/">volleyball</a>.</p>
+    <p>I am interested in <a href="https://www.youtube.com/watch?v=t6dcO4y9vhY">volleyball</a>.</p>
     <p>I like photography too! Here's one of my pictures!</p>
+    <img src="picture.jpg"/>
     <h2>Projects</h2>
     <p>I am participating in <a href="https://developers.google.com/open-source/gci/">Google Code-in 2016</a> with <a href="http://fossasia.org">FOSSASIA</a>!</p>
   </body>
