--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Interests</h2>
     <p>I am interested in <a href="https://www.youtube.com/watch?v=t6dcO4y9vhY">volleyball</a>.</p>
     <p>I like photography too! Here's one of my pictures!</p>
-    <img src="picture.jpg"/>
+    <img id="big" src="picture.jpg"/>
     <h2>Projects</h2>
     <p>I am participating in <a href="https://developers.google.com/open-source/gci/">Google Code-in 2016</a> with <a href="http://fossasia.org">FOSSASIA</a>!</p>
   </body>
